@@ -134,9 +134,6 @@ Medium term
   some archives/keyed-archives with PyObjC 2.3, 2.5, 2.5.1, 3.0, check those
   in as binary files and test that the can be read back)
 
-* See XXX in block-support.m: need some extra code to get the
-  same block objects as emitted by recent Clang versions
-
 * Look for XXX/TODO/FIXME in code and fix those problems.
 
 * special_registry in supercall should be a dictionary
@@ -215,3 +212,6 @@ Medium term
   (especially when enhancing the test suite)
 
 * tests with blocks that return a large struct (stret calling convention)
+
+* Is it possible to implement pyobjc_unicode in Python?
+  (not really: need to copy the data somehow)
